--- a/index.html
+++ b/index.html
@@ -38,13 +38,16 @@
                     <div class="me-auto"></div>
                     <ul class="navbar-nav">
                         <li class="nav-item active">
-                            <a class="nav-link" href="#">Hem<span class="sr-only">(current)</span></a>
+                            <a class="nav-link" href="#">Home<span class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Böcker</a>
+                            <a class="nav-link" href="#">Books</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Mina sidor</a>
+                            <a class="nav-link" href="#">Contact us</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">My accounts</a>
                         </li>
                     </ul>
                 </div>
