--- a/index.html
+++ b/index.html
@@ -41,13 +41,13 @@
                             <a class="nav-link" href="#">Home<span class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Books</a>
+                            <a class="nav-link" href="books.html">Books</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Contact us</a>
+                            <a class="nav-link" href="contact_us.html">Contact us</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">My accounts</a>
+                            <a class="nav-link" href="sign-up/login.html">My accounts</a>
                         </li>
                     </ul>
                 </div>
