contact us page

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                             <a class="nav-link" href="books.html">Books</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="contact_us.html">Contact us</a>
+                            <a class="nav-link" href="./contact-us/contact.html">Contact us</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="sign-up/login.html">My accounts</a>
