--- a/contact-us/contact.html
+++ b/contact-us/contact.html
@@ -8,6 +8,39 @@
 <link rel="stylesheet" type="text/css" href="contact.css">
 </head>
 
+
+<header class="header_area">
+    <div class="main-menu">
+        <nav class="navbar navbar-expand-lg navbar-light">
+            <a class="navbar-brand" href="#">
+                <img src="../img/KTH.png" alt="KTH"></a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <div class="me-auto"></div>
+                <ul class="navbar-nav">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="../index.html">Home<span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="../books.html">Books</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="../contact-us/contact.html">Contact us</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="../sign-up/login.html">My accounts</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+    </div>
+</header>
+
+
+
 <body>
 	<section class="contact">
 	  <div class="content">
